apps/desktop/src-tauri/build_error_claim.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/camiloayerbeposada/gns-browser-tauri/src-tauri/Cargo.toml
workspace: /Users/camiloayerbeposada/gns-browser-tauri/Cargo.toml
    Checking gns-browser v1.0.0 (/Users/camiloayerbeposada/gns-browser-tauri/src-tauri)
error[E0382]: borrow of moved value: `identity`
   --> src-tauri/src/commands/commands_handle.rs:376:38
    |
324 |     let identity = state.identity.lock().await;
    |         -------- move occurs because `identity` has type `tokio::sync::MutexGuard<'_, IdentityManager>`, which does not implement the `Copy` trait
...
360 |     drop(identity); // Release lock before network call
    |          -------- value moved here
...
376 |                 let encryption_key = identity.encryption_key_hex().unwrap_or_default();
    |                                      ^^^^^^^^ value borrowed here after move
    |
    = note: borrow occurs due to deref coercion to `IdentityManager`
note: deref defined here
   --> /Users/camiloayerbeposada/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tokio-1.48.0/src/sync/mutex.rs:979:5
    |
979 |     type Target = T;
    |     ^^^^^^^^^^^

warning: unused variable: `enabled`
  --> src-tauri/src/commands/breadcrumbs.rs:89:5
   |
89 |     enabled: bool,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_enabled`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `state`
  --> src-tauri/src/commands/breadcrumbs.rs:90:5
   |
90 |     state: State<'_, AppState>,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

For more information about this error, try `rustc --explain E0382`.
warning: `gns-browser` (lib) generated 2 warnings
error: could not compile `gns-browser` (lib) due to 1 previous error; 2 warnings emitted
